[gd_scene load_steps=3 format=3 uid="uid://cx55o77d3jahg"]

[ext_resource type="Theme" uid="uid://dcn0qri7xl5ii" path="res://themes/gameui_theme.tres" id="1_8x1tg"]
[ext_resource type="Script" path="res://scripts/battle/ui/LevelUp/LevelUpItemUI.gd" id="1_f71is"]

[node name="LevelUpItem" type="PanelContainer"]
custom_minimum_size = Vector2(250, 0)
offset_right = 290.0
offset_bottom = 315.0
script = ExtResource("1_f71is")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
theme = ExtResource("1_8x1tg")

[node name="Panel" type="Panel" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
size_flags_vertical = 0

[node name="UpgradeNameLabel" type="Label" parent="VBoxContainer/Panel"]
unique_name_in_owner = true
self_modulate = Color(0.537255, 0.862745, 0.94902, 1)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -105.0
offset_top = -13.0
offset_right = 105.0
offset_bottom = 13.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 0
text = "Knight"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("1_8x1tg")

[node name="UpgradeDescLabel" type="Label" parent="VBoxContainer/PanelContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 1
text = "Protection now lasts for 1 turn longer"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="ChooseButton" type="Button" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 8
focus_mode = 0
theme = ExtResource("1_8x1tg")
text = "Select"
